--- a/package.json
+++ b/package.json
@@ -1,39 +1,25 @@
 {
-  "name": "mail-management-system",
+  "name": "ultra-mail-gui",
   "version": "1.0.0",
-  "description": "A web application for managing mails and items sent with them.",
   "main": "dist/server.js",
   "scripts": {
     "start": "ts-node src/server.ts",
     "build": "tsc",
-    "test": "jest",
     "dev": "ts-node-dev src/server.ts"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "mongoose": "^6.0.0",
-    "jsonwebtoken": "^8.5.1",
-    "ejs": "^3.1.6",
-    "body-parser": "^1.19.0",
-    "dotenv": "^10.0.0"
+    "express": "^4.18.2",
+    "sequelize": "^6.35.1",
+    "sqlite3": "^5.1.6",
+    "dotenv": "^16.3.1",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
-    "typescript": "^4.4.3",
-    "ts-node": "^10.2.1",
-    "jest": "^26.6.3",
-    "@types/jest": "^26.0.0",
-    "@types/express": "^4.17.13",
-    "@types/mongoose": "^5.11.97",
-    "@types/jsonwebtoken": "^8.5.5",
-    "@types/node": "^16.0.0"
-  },
-  "keywords": [
-    "mail",
-    "management",
-    "system",
-    "web",
-    "application"
-  ],
-  "author": "Your Name",
-  "license": "MIT"
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.9.4",
+    "@types/jsonwebtoken": "^9.0.5",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.3.2"
+  }
 }
