fix: update CORS_ORIGIN in .env and adjust Item model to use MailId for Sequelize compatibility

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=3000
 JWT_SECRET=your_jwt_secret_here
 ADMIN_TOKEN=your_admin_token_here
-CORS_ORIGIN=http://your-minecraft-server:port
+CORS_ORIGIN=http://boston-research.gl.joinmc.link
