added missing deps

--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "sequelize": "^6.35.1",
     "sqlite3": "^5.1.6",
     "dotenv": "^16.3.1",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "ejs": "^3.1.9",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
