--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "sqlite3": "^5.1.6",
     "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.2",
-    "ejs": "^3.1.9",
     "bcrypt": "^5.1.1",
-    "cors": "^2.8.5"
+    "ejs": "^3.1.9",
+    "express-session": "^1.17.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -23,6 +23,9 @@
     "@types/jsonwebtoken": "^9.0.5",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "@types/bcrypt": "^5.0.2",
+    "@types/ejs": "^3.1.5",
+    "@types/express-session": "^1.17.10"
   }
 }
